--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   height:100vh;
   width:100%;
   display:flex;
-  
+  background-color: rgb(51, 49, 49);
+  color:white;
 }
 
 .main{
@@ -12,4 +13,5 @@
 .can{
   height:100%;
   width:50vw;
+  background-color: white;
 }
