--- a/src/styles/Canvas.css
+++ b/src/styles/Canvas.css
@@ -1,6 +1,6 @@
 .Can{
     margin:1em;
-    height:min-content;
+    height:90%;
     width:50vw;
     display:grid;
     grid-template-rows: 1fr 5fr;
@@ -14,6 +14,7 @@
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     background-color: aqua;
+    padding-bottom: 0;
 }
 .child1 h2{
     grid-column: 2/3;
@@ -24,9 +25,8 @@
     grid-column: 1/2;
 }
 .child2{
-    display:grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 1fr 3fr;
+    display:flex;
+    flex-direction: column;
 }
 .child3{
     display:flex;
@@ -57,7 +57,8 @@ hr{
     display:flex;
     flex-direction: column;
     padding:1em;
-    padding-top:0
+    padding-top:0;
+    
 }
 .schild1{
     display:flex;
@@ -77,3 +78,7 @@ span{
     grid-column: 1/2;
     grid-row:1/2;;
 }
+h4{
+    margin:0;
+}
+
